[tool.poetry]
name = "pytimetools"
version = "0.1.3"
description = "a time tools for django"
authors = ["huoyinghui <hyhlinux@163.com>"]
license = "MIT"

homepage = "https://github.com/pydtools/pytimetools/"
repository = "https://github.com/pydtools/pytimetools/"
documentation = "https://github.com/pydtools/pytimetools/wiki"
classifiers=[
    "Programming Language :: Python :: 3.7",
]

packages = [
    { include = "pytimetools" },
]

[tool.poetry.scripts]
websocks =  'pytimetools.commands:main'